--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,12 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.14.4 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 
 dependencies:
   expressions : ^0.2.3
+  html: ^0.15.0
 
 dev_dependencies:
   lints: ^1.0.0
