--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: html_xpath_selector
+name: xpath_for_html
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 # homepage: https://www.example.com
