add xml support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: xpath_for_xml
-description: XPath package for HTML to locate DOM nodes, most XPath syntax is supported.
-version: 1.0.2
-homepage: https://github.com/simonkimi/xpath_for_html
+name: xpath_selector
+description: XPath package for HTML and XML, most XPath syntax is supported.
+version: 1.0.1
+homepage: https://github.com/simonkimi/xpath_selector
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
