--- a/xpath_selector/pubspec.yaml
+++ b/xpath_selector/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xpath_selector
 description: XPath package for HTML and XML, most XPath syntax are supported.
-version: 2.2.4+1
+version: 3.0.0
 homepage: https://github.com/simonkimi/xpath_selector
 
 environment:
