--- a/xpath_selector_xml_parser/pubspec.yaml
+++ b/xpath_selector_xml_parser/pubspec.yaml
@@ -1,13 +1,15 @@
 name: xpath_selector_xml_parser
 description: A xml parser implementation with xml for xpath_selector
-version: 1.0.0
+version: 3.0.0
+homepage: https://github.com/simonkimi/xpath_selector
+
 
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xpath_selector: ^2.2.4
+  xpath_selector: any
   xml: any
 
 dev_dependencies:
