--- a/xpath_selector_html_parser/pubspec.yaml
+++ b/xpath_selector_html_parser/pubspec.yaml
@@ -3,13 +3,11 @@ description: A html parser implementation with html for xpath_selector
 version: 3.0.0
 homepage: https://github.com/simonkimi/xpath_selector
 
-
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xpath_selector: any
+  xpath_selector: ^3.0.0
   html: ^0.15.0
 
 dev_dependencies:
