--- a/xpath_selector_xml_parser/pubspec.yaml
+++ b/xpath_selector_xml_parser/pubspec.yaml
@@ -4,13 +4,12 @@ version: 3.0.0
 homepage: https://github.com/simonkimi/xpath_selector
 
 
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xpath_selector: any
-  xml: any
+  xpath_selector: ^3.0.0
+  xml: ^5.3.1
 
 dev_dependencies:
   lints: ^2.0.0
