--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Files and directories created by pub.
-.dart_tool/
+xpath_selector/.dart_tool/
 .packages
 
 # Conventional directory for build outputs.
