--- a/xpath_selector/example/pubspec.yaml
+++ b/xpath_selector/example/pubspec.yaml
@@ -8,13 +8,11 @@ environment:
   sdk: '>=2.12.1 <3.0.0'
 
 dependencies:
-  xpath_selector:
-    path: ../
-#  xpath_selector_html_parser:
-#    path: ../../xpath_selector_html_parser
-#  xpath_selector_xml_parser:
-#    path: ../../xpath_selector_xml_parser
+  xpath_selector: ^3.0.0
+  xpath_selector_html_parser: ^3.0.0
+  xpath_selector_xml_parser: ^3.0.0
+
 
 dev_dependencies:
   lints: ^2.0.0
-  test: ^1.16.0
+
