--- a/xpath_selector/pubspec.yaml
+++ b/xpath_selector/pubspec.yaml
@@ -1,13 +1,13 @@
 name: xpath_selector
-description: XPath package for HTML and XML, most XPath syntax are supported.
-version: 3.0.1
+description: XPath package for HTML and XML, basic XPath syntax are supported.
+version: 3.0.2
 homepage: https://github.com/simonkimi/xpath_selector
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  expressions: ^0.2.3
+  expressions: ^0.2.5
 
 dev_dependencies:
   lints: ^1.0.0
