--- a/xpath_selector_html_parser/pubspec.yaml
+++ b/xpath_selector_html_parser/pubspec.yaml
@@ -1,14 +1,14 @@
 name: xpath_selector_html_parser
-description: A html parser implementation with html for xpath_selector
-version: 3.0.0
+description: A html parser implementation with html for xpath_selector, xpath_selector is required.
+version: 3.0.1
 homepage: https://github.com/simonkimi/xpath_selector
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xpath_selector: ^3.0.0
-  html: ^0.15.0
+  xpath_selector: ^3.0.2
+  html: ^0.15.1
 
 dev_dependencies:
   lints: ^2.0.0
