--- a/xpath_selector_xml_parser/pubspec.yaml
+++ b/xpath_selector_xml_parser/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xpath_selector_xml_parser
-description: A xml parser implementation with xml for xpath_selector
-version: 3.0.0
+description: A xml parser implementation with xml for xpath_selector, xpath_selector is required.
+version: 3.0.1
 homepage: https://github.com/simonkimi/xpath_selector
 
 
@@ -8,8 +8,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xpath_selector: ^3.0.0
-  xml: ^5.3.1
+  xpath_selector: ^3.0.2
+  xml: ^6.2.2
 
 dev_dependencies:
   lints: ^2.0.0
